<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- A 'parent' preference, which enables/disables child preferences (below)
         when checked/unchecked. -->
    <SwitchPreference
        android:defaultValue="false"
        android:key="twitter_on"
        android:title="@string/pref_twitter_on" />

    <EditTextPreference
        android:capitalize="words"
        android:dependency="twitter_on"
        android:defaultValue=""
        android:inputType="textEmailAddress"
        android:key="twitter_login"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_twitter_login" />

    <EditTextPreference
        android:capitalize="words"
        android:dependency="twitter_on"
        android:defaultValue=""
        android:inputType="textPassword"
        android:key="twitter_pass"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_twitter_pass" />

    <EditTextPreference
        android:capitalize="words"
        android:dependency="twitter_on"
        android:defaultValue=""
        android:inputType="textUri"
        android:key="twitter_profile"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_twitter_profile" />


</PreferenceScreen>